p4-translation/tests/ArrayFormalByValue.mj.err
 line 1, column 9: warning: open array passed by value (x)
 line 1, column 9: error: open array passed by value unimplemented (x)
