p4-translation/tests/ArrayFormalByValue.mj
def foo(x:[]int): int {
    return x[First(x)];
}
